--- a/WebAPi.CoworkingSpace/appsettings.Development.json
+++ b/WebAPi.CoworkingSpace/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySqlConnectionStr": "Server=localhost;Database=CoworkingSpace;User=Trung;Password=trung220703;"
+    "MySqlConnectionStr": "Server=localhost;Port=3307;Database=CoworkingSpace;User=trung;Password=trung220703;"
   },
   "JWT": {
     "ValidAudience": "http://localhost:4200",
@@ -15,5 +15,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Redis": {
+    "Host": "redis",
+    "Port": 6379
+  }
 }
