--- a/WebAPi.CoworkingSpace/appsettings.Development.json
+++ b/WebAPi.CoworkingSpace/appsettings.Development.json
@@ -15,9 +15,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Redis": {
-    "Host": "redis",
-    "Port": 6379
-  }
+  "AllowedHosts": "*"
 }
