finish composing docker

--- a/WebAPi.CoworkingSpace/WebAPi.CoworkingSpace.csproj
+++ b/WebAPi.CoworkingSpace/WebAPi.CoworkingSpace.csproj
@@ -32,4 +32,10 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="ini.sql">
+        <DependentUpon>Dockerfile</DependentUpon>
+      </None>
+    </ItemGroup>
+
 </Project>
