--- a/WebAPi.CoworkingSpace/Properties/launchSettings.json
+++ b/WebAPi.CoworkingSpace/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "https://localhost:7102;http://localhost:5196",
+      "applicationUrl": "http://0.0.0.0:5196",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
