--- a/WebAPi.CoworkingSpace/appsettings.Development.json
+++ b/WebAPi.CoworkingSpace/appsettings.Development.json
@@ -15,5 +15,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "Google": {
+      "ClientId": "831948674948-j4hup6ts7dqch37uq6jttmi4mg13kmcp.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }  
+  }
+  
 }
