--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="CloudinaryDotNet" Version="1.27.5" />
       <PackageReference Include="Dapper" Version="2.1.66" />
       <PackageReference Include="Dapper-QueryBuilder" Version="2.0.0" />
+      <PackageReference Include="Google.Apis.Auth" Version="1.69.0" />
       <PackageReference Include="MediatR" Version="12.4.1" />
       <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.3" />
