--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="12.0.1" />
       <PackageReference Include="CloudinaryDotNet" Version="1.27.5" />
       <PackageReference Include="Dapper" Version="2.1.66" />
       <PackageReference Include="Dapper-QueryBuilder" Version="2.0.0" />
