--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -8,12 +8,18 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
       <PackageReference Include="MediatR" Version="12.4.1" />
       <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="SpaceService\CQRS\" />
+      <Folder Include="VenueService\CQRS\" />
     </ItemGroup>
 
 </Project>
