--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -18,7 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="SpaceService\CQRS\" />
+      <Folder Include="AuthService\DTOs\" />
       <Folder Include="VenueService\CQRS\" />
     </ItemGroup>
 
