--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -18,6 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="AmenityService\DTOs\" />
       <Folder Include="VenueService\CQRS\" />
     </ItemGroup>
 
