--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -19,6 +19,7 @@
 
     <ItemGroup>
       <Folder Include="AmenityService\DTOs\" />
+      <Folder Include="SpaceService\Validators\" />
       <Folder Include="VenueService\CQRS\" />
     </ItemGroup>
 
