add mysql env variable

--- a/WebAPi.CoworkingSpace/appsettings.Development.json
+++ b/WebAPi.CoworkingSpace/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "MySqlConnectionStr": "Server=localhost;Port=3307;Database=CoworkingSpace;User=trung;Password=trung220703;"
+    "MySqlConnectionStr": "Server=localhost;Port=3307;Database=CoworkingSpace;User=trung;Password=trung220703;",
+    "MySqlRailway": "%MYSQL_URL%"
   },
   "JWT": {
     "ValidAudience": "http://localhost:4200",
