--- a/WebAPi.CoworkingSpace/appsettings.Development.json
+++ b/WebAPi.CoworkingSpace/appsettings.Development.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySqlConnectionStr": "Server=localhost;Port=3307;Database=CoworkingSpace;User=trung;Password=trung220703;",
-    "MySqlRailway": "%MYSQL_URL%"
+    "MySqlConnectionStr": "Server=localhost;Port=3307;Database=CoworkingSpace;User=trung;Password=trung220703;"
   },
   "JWT": {
     "ValidAudience": "http://localhost:4200",
