--- a/WebAPi.CoworkingSpace/appsettings.Development.json
+++ b/WebAPi.CoworkingSpace/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "MySqlConnectionStr": "Server=localhost;Port=3307;Database=CoworkingSpace;User=trung;Password=trung220703;"
+    "MySqlConnectionStr": "Server=localhost;Port=3307;Database=CoworkingSpace;User=trung;Password=trung220703;",
+    "DefaultConnection": ""
   },
   "JWT": {
     "ValidAudience": "http://localhost:4200",
@@ -22,5 +23,4 @@
       "ClientSecret": "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"
     }  
   }
-  
 }
