--- a/WebAPi.CoworkingSpace/appsettings.Development.json
+++ b/WebAPi.CoworkingSpace/appsettings.Development.json
@@ -1,8 +1,7 @@
 {
   "ConnectionStrings": {
-    "MySqlConnectionStr": "Server=localhost;Port=3307;Database=CoworkingSpace;User=trung;Password=trung220703;",
-    "DefaultConnection": ""
-  },
+    "MySqlConnectionStr": "Server=mysql.railway.internal;Port=3306;Database=railway;User Id=root;Password=IVtppnihJzkPxzCUsGTezqugtDwAsEDo;SslMode=None;"
+},
   "JWT": {
     "ValidAudience": "http://localhost:4200",
     "ValidIssuer": "http://localhost:4200",
