--- a/WebAPi.CoworkingSpace/appsettings.Development.json
+++ b/WebAPi.CoworkingSpace/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySqlConnectionStr": "Server=mysql.railway.internal;Port=3306;Database=railway;User Id=root;Password=IVtppnihJzkPxzCUsGTezqugtDwAsEDo;SslMode=None;"
+    "MySqlConnectionStr": "Server=localhost;Port=3307;Database=CoworkingSpace;User=trung;Password=trung220703;"
 },
   "JWT": {
     "ValidAudience": "http://localhost:4200",
