--- a/WebAPi.CoworkingSpace/appsettings.Development.json
+++ b/WebAPi.CoworkingSpace/appsettings.Development.json
@@ -6,7 +6,7 @@
     "ValidAudience": "http://localhost:4200",
     "ValidIssuer": "http://localhost:4200",
     "Secret": "DLCGnQGYlH4Xfe53aOXP8F6V32eo25gw",
-    "AccessTokenValidityInMinutes": 20,
+    "AccessTokenValidityInMinutes": 200,
     "RefreshTokenValidityInDays": 7
   },
   "Logging": {
@@ -28,9 +28,9 @@
     }
   },
   "VnPay": {
-    "TmnCode": "C22VY38T",
-    "HashSecret": "2NUU6BNHVTCC25E842B273HBYOISKBI6",
+    "TmnCode": "NIS91J6Q",
+    "HashSecret": "3JAVWJUHHCZ8ZQ9CBRHSWH3XLKJ32GIG",
     "PaymentUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
-    "ReturnUrl": "http://localhost:4196/checkout"
+    "ReturnUrl": "https://coworkingspace-production-1d94.up.railway.app"
   }
 }
