--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
       <PackageReference Include="MediatR" Version="12.4.1" />
       <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
+      <PackageReference Include="payOS" Version="1.0.9" />
     </ItemGroup>
 
     <ItemGroup>
